@@ -1,11 +1,0 @@
-<?xml version="1.0"?>
-<object name="portal_skins">
- <object name="cps_designer_themes_compat" meta_type="Filesystem Directory View"
-    directory="CPSDesignerThemes/skins/cps_designer_themes_compat"/>
- <skin-path name="CPSSkins">
-  <layer name="cps_designer_themes_compat" insert-after="custom"/>
- </skin-path>
- <skin-path name="CPSSkins-macroless">
-  <layer name="cps_designer_themes_compat" insert-after="custom"/>
- </skin-path>
-</object>
